--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.plineexp</groupId>
-  <artifactId>TriangleMaven</artifactId>
+  <groupId>com.tpexp</groupId>
+  <artifactId>A-Master-Example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>TriangleMaven</name>
+  <name>A-Master-Example</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -37,7 +37,7 @@
 			<configuration>
 				<archive>
 					<manifest>
-						<mainClass>com.plineexp.TriangleMaven.App</mainClass>
+						<mainClass>com.tpexp.A-Master-Example.App</mainClass>
 					</manifest>
 				</archive>
 			</configuration>
